Move intro text to about.md set intro icons in-line with h2 text adjust links and text of second & third intro element remove title from gallery section, reduce to one line, thumbnail size gallery page jump no longer needed

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -91,7 +91,8 @@
   overflow: hidden;
 
   img {
-    width: 50%;
+    width: 15%;
+    margin-right: .3em;
   }
 }
 
